      Please refer to the cvs update list archives for the even more detailed
      list of all changes.

      See at the end of file for the list of contributors (initials appearing
      in the second column of the changelog below).

Release 0.68 'Cynthia' September xx, 2010
-----------------------------------------

2012-07-28 VZ: Optionally use popup notifications for new mail reporting.
2012-07-21 VZ: Make it possible to set base mailbox path in the GUI.
2011-12-26 VZ: Allow to create and configure new folders in "Quick filter".
2010-08-01 VZ: Show hidden folders if new mail arrives into them.
2010-07-05 VZ: Send messages from a separate background thread.
2009-12-27 VZ: Pre-fill composer recipient with address from clipboard if any.
2008-08-05 VZ: Add support for signing outgoing messages using OpenPGP
2008-05-04 VZ: Improve the display of the embedded messages.
2008-05-04 VZ: Allow toggling tool/status bars and showing full-screen.
2008-05-02 VZ: Add support for server-side spam filters.
2008-04-25 VZ: Add support for filtering on individual headers to the GUI.
2008-04-23 VZ: Allow using wildcards in the headers selected to be seen.
2008-04-22 VZ: Added support for "Face:" header, similar to "X-Face:"
2008-04-21 VZ: Allow adding custom headers to show in the message view
2007-08-04 VZ: Allow autocollecting addresses in outgoing messages only
2007-04-26 VZ: Add the possibility to treat different addresses as equivalent
2007-01-10 VZ: Show the message subject in the composer window title bar
2007-01-08 VZ: Added support for "subject" parameter of mailto: URLs
2006-12-25 VZ: Added "Remove attachments" command
2006-09-05 NB: Mahogany can now be compiled with wxWine

Release 0.67 'Constance' August 1, 2006
---------------------------------------

2006-06-26 VZ: added multipart/related support
2006-06-24 VZ: added simple whitelist support
2006-05-27 VZ: close all opened folders on suspend and reopen them on resume