@@ -415,8 +415,7 @@ const MOption MP_MSGS_REMOVE_LIST_PREFIX_BREAKING;
 const MOption MP_MSGS_SEARCH_CRIT;
 const MOption MP_MSGS_SEARCH_ARG;
 const MOption MP_BROWSER;
-const MOption MP_BROWSER_ISNS;
-const MOption MP_BROWSER_INNW;
+const MOption MP_BROWSER_OTHER;
 const MOption MP_EXTERNALEDITOR;
 const MOption MP_ALWAYS_USE_EXTERNALEDITOR;
 const MOption MP_PGP_COMMAND;
@@ -838,8 +837,7 @@ static const MOptionData MOptions[] =
     DEFINE_OPTION(MP_MSGS_SEARCH_CRIT),
     DEFINE_OPTION(MP_MSGS_SEARCH_ARG),
     DEFINE_OPTION(MP_BROWSER),
-    DEFINE_OPTION(MP_BROWSER_ISNS),
-    DEFINE_OPTION(MP_BROWSER_INNW),
+    DEFINE_OPTION(MP_BROWSER_OTHER),
     DEFINE_OPTION(MP_EXTERNALEDITOR),
     DEFINE_OPTION(MP_ALWAYS_USE_EXTERNALEDITOR),
     DEFINE_OPTION(MP_PGP_COMMAND),
